Qt: Selecting 'system default' choice in 'force window style' does nothing

In the simple prefs Qt interface, if you play with the 'force window style' option, you'll find that it changes active state immediately (related to that is #25584 (closed)). Of note for this report is the fact that when you select the 'system's default' choice, nothing happens.

  1. Start with the style that corresponds to the actual system default
  2. Select the other choice, giving you a different style.
  3. Now select 'system's default' and you'll notice that it remains unchanged from step 2 rather than taking you back to the state of step 1.
Edited by Lyndon Brown