qt/preferences: fix "Force windows style" option

closes #25720